--- a/Images/symfony/apache_config/000-default.conf
+++ b/Images/symfony/apache_config/000-default.conf
@@ -1,8 +1,8 @@
 <VirtualHost *:80>
-    ServerAdmin hatim.ajdaini.ext@orange.com
+    ServerAdmin admin@localhost.com
     
-    DocumentRoot /var/www/gitlab-sf/public
-    <Directory /var/www/gitlab-sf/public>
+    DocumentRoot /var/www/app/public
+    <Directory /var/www/app/public>
         AllowOverride All
         Order Allow,Deny
         Allow from All
@@ -10,11 +10,11 @@
 
     # uncomment the following lines if you install assets as symlinks
     # or run into problems when compiling LESS/Sass/CoffeeScript assets
-    # <Directory /var/www/gitlab-sf>
+    # <Directory /var/www/app>
     #     Options FollowSymlinks
     # </Directory>
 
-    ErrorLog /var/log/apache2/gitlab-sf_error.log
-    CustomLog /var/log/apache2/gitlab-sf_access.log combined
+    ErrorLog /var/log/apache2/app_error.log
+    CustomLog /var/log/apache2/app_access.log combined
 </VirtualHost>
 
